--- a/style.css
+++ b/style.css
@@ -10,10 +10,37 @@
 }
 
 body {
+	background:url(https://media.giphy.com/media/XG9PR7CuOfPlS/giphy.gif);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+}
+
+.menu{
+	border: 10px solid red;
+	list-style: none;
+	font-size: 20px;
+	color: red;
+}	
+
+#start{
+	border:1px solid red;
+}
+
+}
+
+
+#message{
+	border: 2px solid black;
+	width: 100px;
+}
+
+#next{
+	border: 2px solid black;
+	float: right;
+	font-size: 40px;
+	
 }
 
 .wrap {
@@ -22,6 +49,7 @@ body {
 	height: 505px;
 	width: 505px;
 	margin-top: 80px;
+	background-color: white;
 }
 
 .block-container {
@@ -42,8 +70,14 @@ body {
 	width: 125px;
 	border: 1px solid red;
 	font-size: 20px;
+	color: red;
 }
 
 .black {
 	background-color: black;
-}
+
+
+
+
+
+
