--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
 	border:1px solid red;
 }
 
-}
 
 
 #message{
@@ -37,7 +36,7 @@ body {
 }
 
 #next{
-	border: 2px solid black;
+	border: 2px solid #29e8e1;
 	float: right;
 	font-size: 40px;
 	
@@ -76,7 +75,13 @@ body {
 .black {
 	background-color: black;
 
+}
 
+#level2{
+	visibility: collapse;
+	height: 125px;
+	z-index: -100;
+}
 
 
 
