completed second map but need it add no diplay

--- a/style.css
+++ b/style.css
@@ -86,21 +86,24 @@ body {
 }
 
 
+/*.wrap-2{
+	display: none;
+}*/
 
 /*#level2{
 	visibility: hidden;
 	
 }*/
 
-.hiddenLevel {
-	/*visibility: hidden;*/
+/*.hiddenLevel {
+	visibility: hidden;
 	display: none;
 }
 	
 .addBox{
 
 	visibility: hidden;	
-}
+}*/
 
 
 
