--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     font-family: fantasy;
     background-color: rgba(255, 0, 0, 0.51);
     color: rgb(254, 251, 250);
+        position: absolute;
 }
 
 #next{
