--- a/style.css
+++ b/style.css
@@ -10,11 +10,20 @@
 }
 
 body {
-	background:url(https://media.giphy.com/media/XG9PR7CuOfPlS/giphy.gif);
+	background:url(https://slproductions.files.wordpress.com/2014/11/labyrinth-wallpaper-1-1024x768.jpg);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	    /* The image used */
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .menu{
@@ -51,9 +60,9 @@ body {
     display: inline-block;
     font-size: 45px;
     font-family: fantasy;
-    color: #4c5b4c;
+    color: #275627;
     font-style: oblique;
-    background-color: #243233;
+    background-color: rgba(195, 215, 216, 0.44);
     display: none;
 
 }
@@ -97,6 +106,7 @@ body {
 	margin-top: 80px;
 	background-color: #2b3b3b;
 	display: none;
+	background:url(https://media.giphy.com/media/XG9PR7CuOfPlS/giphy.gif);
 }
 
 h1{
@@ -120,9 +130,15 @@ h1{
 .block {
 	height: 125px;
 	width: 125px;
-/*	border: 1px solid red;
-*/	font-size: 20px;
+	/*border: 1px solid red;*/
+	font-size: 20px;
 	color: red;
+}
+
+#here{
+	text-align: center;   
+	margin-bottom: -43px;
+    font-size: 26px;
 }
 
 .black {
@@ -130,17 +146,21 @@ h1{
 
 }
 
-.white{
-	background-color: white;
-}
 
 .startButton{
-	color: blue;
+	color: white;
 }
 
+
+.startButton2{
+	font-size: 25px;
+	color:white;
+}
 .exit{
 	background-color: green;
 	color: white;
+	text-align: center;
+	font-size: 45px;
 }
 
 
@@ -159,17 +179,22 @@ h1{
 	border: solid black;
     font-size: 45px;
     background-color: aqua;
+    visibility: hidden;
 
 
 }
 
 @-webkit-keyframes wobble  {
-  0%  { -webkit-transform:  rotate(5deg); }
-  20%  { -webkit-transform:  rotate(15deg); }
-  50%  { -webkit-transform:  rotate(-15deg); }
-  100%  { -webkit-transform:  rotate(5deg); }
+  0%  { -webkit-transform:  rotate(10deg); }
+  20%  { -webkit-transform:  rotate(18deg); }
+  50%  { -webkit-transform:  rotate(-18deg); }
+  100%  { -webkit-transform:  rotate(10deg); }
 }
 .wobble { -webkit-animation: wobble 8s infinite; }
 
-
+.exit2{
+	font-size: 20px
+	color:white
+	;
+}
 
